Fixing contrast issue with color palette #10

--- a/assets/css/olewind.css
+++ b/assets/css/olewind.css
@@ -481,15 +481,15 @@ body {
 }
 
 .bg-cloud {
-	background: #bfc5c9;
+	background: #d9dee2;
 }
 
 .bg-dusty-blue {
-	background: #6b8ba4;
+	background: #4f6f8a;
 }
 
 .bg-olive {
-	background: #8a9a5b;
+	background: #556b2f;
 }
 
 .bg-white {
@@ -502,15 +502,15 @@ body {
 }
 
 .text-cloud {
-	color: #bfc5c9;
+	color: #d9dee2;
 }
 
 .text-dusty-blue {
-	color: #6b8ba4;
+	color: #4f6f8a;
 }
 
 .text-olive {
-	color: #8a9a5b;
+	color: #556b2f;
 }
 
 .text-white {
